Implements staff bage base fields

--- a/rca/project_styleguide/templates/patterns/pages/staff/staff_detail.yaml
+++ b/rca/project_styleguide/templates/patterns/pages/staff/staff_detail.yaml
@@ -8,9 +8,9 @@ context:
         depth: 3
         title: Staff
     profile_image: true
-    profile_title: Professor
-    profile_firstname: Dale
-    profile_surname: Harrow
+    staff_title: Professor
+    first_name: Dale
+    last_name: Harrow
     profile_type: Tutor
     job_title:
       - department: Intelligent Mobility
@@ -19,16 +19,10 @@ context:
           - { label: 'Chair and Director' }
           - { label: 'Dean of School Mobility' }
           - { label: 'Head of Programmes' }
-    profile_contact_email: imdc@rca.ac.uk
-    profile_school:
-      - { title: 'Intelligent Mobility Design Centre', link: '#' }
-    profile_expertise:
-      - { title: 'AI', link: '#' }
-      - { title: 'Robotics', link: '#' }
-      - { title: 'Vehicle Design', link: '#' }
-    profile_introduction: 'Director of his own practice, Dale has worked on projects of all scales, public and private, around the world.'
-    profile_body: '<p>Dale is an international opinion former and commentator and media persona on design the automotive and transport industry.</p><p>He is a multi award-winning designer, academic leader and a researcher and is regularly cited as one of the most influential and important figures in the automotive industry.</p><p>He is committed to design education and is always keen to raise the intellectual debate about vehicle and automotive design and is currently engaged with a major show at London’s Victoria and Albert museum celebrating the origins processes and history of car design.</p>'
-    accordion:
+    email: imdc@rca.ac.uk
+    introduction: 'Director of his own practice, Dale has worked on projects of all scales, public and private, around the world.'
+    body: '<p>Dale is an international opinion former and commentator and media persona on design the automotive and transport industry.</p><p>He is a multi award-winning designer, academic leader and a researcher and is regularly cited as one of the most influential and important figures in the automotive industry.</p><p>He is committed to design education and is always keen to raise the intellectual debate about vehicle and automotive design and is currently engaged with a major show at London’s Victoria and Albert museum celebrating the origins processes and history of car design.</p>'
+    more_information:
       - path:
         value:
           body: 'TBC'
@@ -139,3 +133,13 @@ context:
         value: { text: 'Lorem ipsum dolor site', href: 'http://www.google.com' }
       - item:
         value: { text: 'Lorem ipsum dolor site', href: 'http://www.google.com' }
+
+  areas:
+    - item:
+      area_of_expertise: { title: 'AI', link: '#' }
+    - item:
+      area_of_expertise: { title: 'Robotics', link: '#' }
+    - item:
+      area_of_expertise: { title: 'Vehicle Design', link: '#' }
+  related_schools:
+    - page: { title: 'School of Communication', url: '#' }
