--- a/rca/project_styleguide/templates/patterns/molecules/key-details/key-details--staff.yaml
+++ b/rca/project_styleguide/templates/patterns/molecules/key-details/key-details--staff.yaml
@@ -1,8 +1,10 @@
 context:
-  page:
-    profile_school:
-      - { title: 'Intelligent Mobility Design Centre', link: '#' }
-    profile_expertise:
-      - { title: 'AI', link: '#' }
-      - { title: 'Robotics', link: '#' }
-      - { title: 'Vehicle Design', link: '#' }
+  areas:
+    - item:
+      area_of_expertise: { title: 'AI', link: '#' }
+    - item:
+      area_of_expertise: { title: 'Robotics', link: '#' }
+    - item:
+      area_of_expertise: { title: 'Vehicle Design', link: '#' }
+  related_schools:
+    - page: { title: 'School of Communication', url: '#' }
