--- a/rca/project_styleguide/templates/patterns/pages/landingpage/landing_page--generic.yaml
+++ b/rca/project_styleguide/templates/patterns/pages/landingpage/landing_page--generic.yaml
@@ -24,6 +24,28 @@ context:
         link: '#'
         image: true
         person: false
+    legacy_news_and_events:
+      - item:
+        type: 'News'
+        title: 'Show 2018: School of Architecture: Making Space for the Future'
+        date: '23 November 2019'
+        link: '#'
+        image: //placekitten.com/500/500
+        person: false
+      - item:
+        type: 'Event'
+        title: 'Designs for Real Life'
+        date: '6 July 2019 — 4 August 2019'
+        link: '#'
+        image: //placekitten.com/500/500
+        person: false
+      - item:
+        type: 'Event'
+        title: 'Redefining Boundaries: Architecture Work-in-progress 2019'
+        date: '23 November 2019'
+        link: '#'
+        image: //placekitten.com/500/500
+        person: false
     related_pages_title: Enterprise at the RCA
     related_pages_text: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eros magna, rhoncus vitae leo condimentum, luctus hendrerit justo. Curabitur iaculis purus ac pellentesque tempor.
     page_list_title: Executive education programmes
