--- a/rca/project_styleguide/templates/patterns/pages/researchcentre/research_centre.yaml
+++ b/rca/project_styleguide/templates/patterns/pages/researchcentre/research_centre.yaml
@@ -19,6 +19,28 @@ context:
     centre_more_text: 'About the Helen Hamlyn centre'
     centre_more_link: '#'
     course_intro_video: 'https://www.youtube.com/watch?v=glIIF-kBXf0'
+    legacy_news_and_events:
+      - item:
+        type: 'News'
+        title: 'Show 2018: School of Architecture: Making Space for the Future'
+        date: '23 November 2019'
+        link: '#'
+        image: //placekitten.com/500/500
+        person: false
+      - item:
+        type: 'Event'
+        title: 'Designs for Real Life'
+        date: '6 July 2019 — 4 August 2019'
+        link: '#'
+        image: //placekitten.com/500/500
+        person: false
+      - item:
+        type: 'Event'
+        title: 'Redefining Boundaries: Architecture Work-in-progress 2019'
+        date: '23 November 2019'
+        link: '#'
+        image: //placekitten.com/500/500
+        person: false
     research_spaces:
       - {
           title: 'Healthcare',
