--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -60,7 +60,7 @@ jobs:
           name: Run Black
           command: |
             . venv/bin/activate
-            black --check ./rca
+            black --check ./rca --exclude migrations/
   deploy_dev:
     docker:
       - image: buildpack-deps:trusty
