--- a/rca/project_styleguide/templates/patterns/pages/staff/staff_listing--no-results.yaml
+++ b/rca/project_styleguide/templates/patterns/pages/staff/staff_listing--no-results.yaml
@@ -1,7 +1,7 @@
 context:
   page:
     title: Our People
-    introduction: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ultrices tincidunt quam ac convallis.
+    introduction: Lorem ipsum dolor sit amet, consectetur adipiscing elit lorem. Cras ultrices tincidunt quam ac convallis.
     filters:
       title: Filter by
       items:
