--- a/rca/project_styleguide/templates/patterns/pages/researchcentre/research_centre.yaml
+++ b/rca/project_styleguide/templates/patterns/pages/researchcentre/research_centre.yaml
@@ -22,21 +22,21 @@ context:
     legacy_news_and_events:
       - item:
         type: 'News'
-        title: 'Show 2018: School of Architecture: Making Space for the Future'
+        title: 'Show 2018: School of Architecture: Making Space for the Future (legacy example)'
         date: '23 November 2019'
         link: '#'
         image: //placekitten.com/500/500
         person: false
       - item:
         type: 'Event'
-        title: 'Designs for Real Life'
+        title: 'Designs for Real Life (legacy example)'
         date: '6 July 2019 — 4 August 2019'
         link: '#'
         image: //placekitten.com/500/500
         person: false
       - item:
         type: 'Event'
-        title: 'Redefining Boundaries: Architecture Work-in-progress 2019'
+        title: 'Redefining Boundaries: Architecture Work-in-progress 2019 (legacy example)'
         date: '23 November 2019'
         link: '#'
         image: //placekitten.com/500/500
