--- a/rca/project_styleguide/templates/patterns/pages/programmes/programme_index.yaml
+++ b/rca/project_styleguide/templates/patterns/pages/programmes/programme_index.yaml
@@ -4,7 +4,7 @@ context:
     title: Our Programmes
     introduction: <p>Experience the world&apos;s <a href="https://www.example.com/">number one</a> university for art and design.</p>
     search_placeholder_text: What are you interested in?
-  subpages:
+  results:
     object_list:
       exists: true
       specific:
