fix pagination yaml

--- a/rca/project_styleguide/templates/patterns/molecules/pagination/pagination.yaml
+++ b/rca/project_styleguide/templates/patterns/molecules/pagination/pagination.yaml
@@ -2,7 +2,7 @@ context:
   paginator_page:
     number: 1
     next_page_number: 2
-  subpages:
+  paginator_page:
     has_previous: true
     has_next: true
     number: 1
