use lower case for aria label variable

--- a/rca/project_styleguide/templates/patterns/molecules/categories-tablist/categories-tablist.yaml
+++ b/rca/project_styleguide/templates/patterns/molecules/categories-tablist/categories-tablist.yaml
@@ -4,7 +4,7 @@ context:
     href: '#'
   value:
     title: Explore by
-    aria-label: Filter results
+    aria_label: Filter results
     items:
       - { title: School or Centre, href: '#' }
       - { title: Research type, href: '#' }
