--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -9,7 +9,7 @@ flake8==3.7.7
 seed-isort-config==1.9.0
 isort==4.3.18
 pre-commit==1.16.1
-black==19.3b0
+black==19.10b
 
 # Pin SQLAlchemy version to work around stellar issue
 # https://github.com/fastmonkeys/stellar/issues/69
