--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,7 +56,7 @@ jobs:
             ./manage.py collectstatic --clear --noinput
             ./manage.py makemigrations --check --noinput
             ./manage.py check
-            ./manage.py test
+            ./manage.py test --settings rca.settings.test
       - run:
           name: Run Black
           command: |
