Add field, validation & output for editable link text of document downloads

--- a/rca/project_styleguide/templates/patterns/molecules/key-details/key-details--project.yaml
+++ b/rca/project_styleguide/templates/patterns/molecules/key-details/key-details--project.yaml
@@ -2,6 +2,7 @@ context:
   page:
     funding: £5m, Research Council
     specification_document: Archictecture MA
+    specification_document_link_text: 'Download a PDF containing more detail: this link text allows up to 80 characters'
   subjects:
     - { title: Product design, link: '#' }
     - { title: Fashion, link: '#' }
