--- a/rca/project_styleguide/templates/patterns/pages/schools/schools.yaml
+++ b/rca/project_styleguide/templates/patterns/pages/schools/schools.yaml
@@ -40,179 +40,9 @@ context:
         introduction: Senior-level executive masterclasses, summer courses and custom executive education programmes for businesses and organisations.
       staff:
         introduction: Browse profiles of our School’s staff, including world-eminent practitioners in architecure…
-    enterprise_highlights:
-      - slide:
-        meta: 'School of Design'
-        title: 'Advanced Taxi for London'
-        description: 'How innovative and disruptive technologies can address the world’s most intractable challenges'
-        image: true
-        link: '#'
-      - slide:
-        meta: 'Alumni Story'
-        title: 'A place with a real focus on making'
-        description: 'Since graduating from the RCA, Holly Hendry’s site-responsive sculptures and installations have been exhibited at galleries in London, Liverpool, Manchester, Copenhagen and Berlin. '
-        image: true
-        link: '#'
-      - slide:
-        meta: 'Alumni Story'
-        title: 'Designing the imposible for NASA'
-        description: 'Creating world class experiences that started at the RCA'
-        image: true
-        link: '#'
-    enterprise_highlights_title: Enterprise highlights
-    enterprise_rca:
-      - {
-          title: 'Innovation RCA',
-          link: '#',
-          meta: false,
-          person: false,
-          description: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque in accumsan massa.',
-          image: true,
-        }
-      - {
-          title: 'Consultancy & knowledge exchange',
-          link: '#',
-          meta: false,
-          person: false,
-          description: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque in accumsan massa.',
-          image: true,
-        }
-      - {
-          title: 'Custom executive education',
-          link: '#',
-          meta: false,
-          person: false,
-          description: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque in accumsan massa.',
-          image: true,
-        }
-    related_research_centres_schools:
-      - item:
-        title: Research centres
-        related_items:
-          - item:
-            title: The Helen Hamlyn Centre for Design
-            programme_description_subtitle: Architecture at the RCA sets out to inspire design innovation
-            img: http://placehold.it/300x270/fff/000
-          - item:
-            title: HELIX Centre
-            programme_description_subtitle: Architecture at the RCA sets out to inspire design innovation
-            img: http://placehold.it/300x270/ff5d1c/fff
-          - item:
-            title: Intelligent Mobility Design Centre
-            programme_description_subtitle: Architecture at the RCA sets out to inspire design innovation
-            img: http://placehold.it/300x270
-          - item:
-            title: RCA Robotics Laboratory
-            programme_description_subtitle: Architecture at the RCA sets out to inspire design innovation
-            img: http://placehold.it/300x270/ff5d1c/fff
-          - item:
-            title: Materials Science Research Centre
-            programme_description_subtitle: Architecture at the RCA sets out to inspire design innovation
-            img: http://placehold.it/300x270
-      - item:
-        title: Schools
-        related_items:
-          - item:
-            title: School of Architecture
-            programme_description_subtitle: Architecture at the RCA sets out to inspire design innovation
-            img: http://placehold.it/300x270/fff/000
-          - item:
-            title: School of Communication
-            programme_description_subtitle: Architecture at the RCA sets out to inspire design innovation
-            img: http://placehold.it/300x270/ff5d1c/fff
-          - item:
-            title: School of Arts & Humanities
-            programme_description_subtitle: Architecture at the RCA sets out to inspire design innovation
-            img: http://placehold.it/300x270
-          - item:
-            title: School of Design
-            programme_description_subtitle: Architecture at the RCA sets out to inspire design innovation
-            img: http://placehold.it/300x270
-    middle_feature_image: true
-    middle_feature_heading: Research degrees
-    middle_feature_meta_heading: Join a thriving community of more than 250 MPhil and PhD students
-    middle_feature_meta_text: Pursue cutting-edge research at the world's leading postgraduate university for art & design.
-    middle_feature_meta_link: '#'
-    startups:
-      - slide:
-        meta: 'Startups'
-        title: 'Lorem ipsum dolor sit'
-        description: 'How innovative and disruptive technologies can address the world’s most intractable challenges'
-        image: true
-        link: '#'
-      - slide:
-        meta: 'Startups'
-        title: 'Lorem ipsum dolor sit'
-        description: 'How innovative and disruptive technologies can address the world’s most intractable challenges'
-        image: true
-        link: '#'
-      - slide:
-        meta: 'Startups'
-        title: 'Lorem ipsum dolor sit'
-        description: 'How innovative and disruptive technologies can address the world’s most intractable challenges'
-        image: true
-        link: '#'
-    research:
-      title: Research at the RCA
-      slides:
-        - slide:
-          value:
-            meta: 'News'
-            title: 'Writing student wins £25,000 economics prize'
-            link: '#'
-            person: false
-            image: True
-        - slide:
-          value:
-            meta: 'News'
-            title: 'InnovationRCA awarded Accelerator of the Year'
-            link: '#'
-            person: false
-            image: True
-        - slide:
-          value:
-            meta: 'News'
-            title: 'MA Fashion Womenswear Student Launches Fashion Boycott'
-            link: '#'
-            person: false
-            image: True
-    text_teaser:
-      title: Our research staff
-      description: Our research staff span a broad range of subjects and areas of expertise.
-      action: Visit all research staff
-      link: '#'
-    bottom_feature_image: true
-    bottom_feature_heading: Angel Club at the RCA
-    bottom_feature_meta_heading: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus id fermentum mi.
-    bottom_feature_meta_text: Aenean nec cursus ipsum. Pellentesque sodales, lectus a placerat eleifend, purus quam malesuada augue
-    bottom_feature_meta_link: '#'
-    news: false
-    legacy_news_and_events:
-      - item:
-        type: 'News'
-        title: 'Show 2018: School of Architecture: Making Space for the Future (legacy example)'
-        date: '23 November 2019'
-        link: '#'
-        image: //placekitten.com/500/500
-        person: false
-      - item:
-        type: 'Event'
-        title: 'Designs for Real Life (legacy example)'
-        date: '6 July 2019 — 4 August 2019'
-        link: '#'
-        image: //placekitten.com/500/500
-        person: false
-      - item:
-        type: 'Event'
-        title: 'Redefining Boundaries: Architecture Work-in-progress 2019 (legacy example)'
-        date: '23 November 2019'
-        link: '#'
-        image: //placekitten.com/500/500
-        person: false
     contact: true
     contact_image: true
     related_pages_title: Enterprise at the RCA
-    page_list_title: Schools and Research centres
   about_teasers:
     - {
         title: 'Innovation RCA',
@@ -260,18 +90,17 @@ context:
       link: '#'
       image: true
       person: false
-  page_list:
+  short_courses:
     - item:
-      title: Programmes for RCA students & alumni
       link:
         url: '#'
-        title: View all executive education courses
+        title: View all our short courses
       related_items:
         - item:
           title: Design Thinking & Innovation
           degree_level: Executive Education
           programme_description_subtitle: Transform your Customer Experience.
-          img: http://placehold.it/300x270/fff/000
+          img: http://placehold.it/300x270/f1f1f1/000
         - item:
           title: Service Design Masterclass
           degree_level: Executive Education
@@ -282,39 +111,6 @@ context:
           degree_level: Executive Education
           programme_description_subtitle: Turning innovation into successful real-world businesses.
           img: http://placehold.it/300x270
-    - item:
-      title: Programmes for individuals & companies
-      link:
-        url: '#'
-        title: View all executive education courses
-      related_items:
-        - item:
-          title: Design Thinking & Innovation
-          degree_level: Executive Education
-          programme_description_subtitle: Transform your Customer Experience.
-          img: http://placehold.it/300x270/fff/000
-        - item:
-          title: Service Design Masterclass
-          degree_level: Executive Education
-          programme_description_subtitle: Learn how Creative Leadership can unlock your potential for innovation.
-          img: http://placehold.it/300x270/ff5d1c/fff
-        - item:
-          title: Creative Leadership
-          degree_level: Executive Education
-          programme_description_subtitle: Turning innovation into successful real-world businesses.
-          img: http://placehold.it/300x270
-  featured_image:
-    title: Our programmes
-    subtitle: Join a thriving community of more than 250 MPhil and PhD students
-    description: Pursue cutting-edge research at the world's leading postgraduate university for art & design.
-    get_link_text: Read more
-    get_link_url: '#'
-  featured_image_secondary:
-    title: Research degrees
-    subtitle: Join a thriving community of more than 250 MPhil and PhD students
-    description: Pursue cutting-edge research at the world's leading postgraduate university for art & design.
-    get_link_text: Read more
-    get_link_url: '#'
   stats_block_default_notch_override: True
   stats_block:
     title: Lorem ipsum dolor sit
@@ -446,6 +242,28 @@ context:
     description: Meet Dr Godofredo Pereira, Head of Programme for MA Environmental Architecture & MA City Design
     action: Find out more
     link: '#'
+  staff:
+    - { name: 'Beth Hughes', role: 'Head of Programmes', link: '#' }
+    - { name: 'Beth Hughes', role: 'Head of Programmes', link: '#' }
+    - { name: 'Beth Hughes', role: 'Head of Programmes', link: '#' }
+    - { name: 'Beth Hughes', role: 'Head of Programmes', link: '#' }
+    - { name: 'Beth Hughes', role: 'Head of Programmes', link: '#' }
+    - { name: 'Beth Hughes', role: 'Head of Programmes', link: '#' }
+    - { name: 'Beth Hughes', role: 'Head of Programmes', link: '#' }
+    - { name: 'Beth Hughes', role: 'Head of Programmes', link: '#' }
+    - { name: 'Beth Hughes', role: 'Head of Programmes', link: '#' }
+    - { name: 'Beth Hughes', role: 'Head of Programmes', link: '#' }
+    - { name: 'Beth Hughes', role: 'Head of Programmes', link: '#' }
+    - { name: 'Beth Hughes', role: 'Head of Programmes', link: '#' }
+    - { name: 'Beth Hughes', role: 'Head of Programmes', link: '#' }
+    - { name: 'Beth Hughes', role: 'Head of Programmes', link: '#' }
+    - { name: 'Beth Hughes', role: 'Head of Programmes', link: '#' }
+    - { name: 'Beth Hughes', role: 'Head of Programmes', link: '#' }
+    - { name: 'Beth Hughes', role: 'Head of Programmes', link: '#' }
+    - { name: 'Beth Hughes', role: 'Head of Programmes', link: '#' }
+    - { name: 'Beth Hughes', role: 'Head of Programmes', link: '#' }
+    - { name: 'Beth Hughes', role: 'Head of Programmes', link: '#' }
+
 tags:
   include_block:
     block:
