--- a/rca/project_styleguide/templates/patterns/pages/schools/schools.yaml
+++ b/rca/project_styleguide/templates/patterns/pages/schools/schools.yaml
@@ -1,14 +1,22 @@
 context:
   page:
+    title: School of Architecture
     get_ancestors:
       - is_root: false
         title: Our Schools
     breadcrumb:
       - { label: 'Research', link: /research/ }
-
-    title: School of Architecture
     introduction: 'Offering an unparalleled interdisciplinary context to pursue design research in the spatial disciplines.'
     introduction_image: true
+    school_dean: John Smith
+    location: <p><a>RCA Kensington<a></p><p><a>RCA White City<a></p>.
+    next_open_day_start_date: !!timestamp '2020-12-13 2:00:00'
+    next_open_day_end_date: !!timestamp '2020-12-15 2:00:00'
+    get_in_touch: <p>0123456789</p><p>email@rca.ac.uk</p>
+    social_links:
+      - '<a>Facebook</a>'
+      - '<a>Twitter</a>'
+      - '<a>Instagram</a>'
     hero_image:
       title: Synaputral Decadence is the flavour of the distant future
       creator: Jianjin Lee Chen
@@ -43,6 +51,9 @@ context:
     contact: true
     contact_image: true
     related_pages_title: Enterprise at the RCA
+  open_day_link:
+    get_link_url: #
+    get_link_text: Book or view all open days
   about_teasers:
     - {
         title: 'Innovation RCA',
@@ -270,6 +281,8 @@ tags:
       template_name: 'patterns/_pattern_library_only/streamfield/project_streamfield.html'
   pageurl:
     ancestor_page:
+      raw: '#'
+    page.school_dean:
       raw: '#'
   slugurl:
     "'home'":
