--- a/rca/project_styleguide/templates/patterns/molecules/key-details/key-details--schools.yaml
+++ b/rca/project_styleguide/templates/patterns/molecules/key-details/key-details--schools.yaml
@@ -1,7 +1,7 @@
 context:
   page:
     school_dean: John Smith
-    location: <p><a>RCA Kensington<a></p><p><a>RCA White City<a></p>.
+    location: <p><a>RCA Kensington</a></p><p><a>RCA White City</a></p>.
     next_open_day_start_date: !!timestamp '2020-12-13 2:00:00'
     next_open_day_end_date: !!timestamp '2020-12-15 2:00:00'
     get_in_touch: <p>0123456789</p><p>email@rca.ac.uk</p>
