--- a/rca/project_styleguide/templates/patterns/molecules/hero/hero.yaml
+++ b/rca/project_styleguide/templates/patterns/molecules/hero/hero.yaml
@@ -1,14 +1,14 @@
 tags:
   image:
-    page.hero_image fill-320x285 as image_small:
+    hero_image fill-320x285 as image_small:
       target_var: image_small
       raw:
         url: '//placekitten.com/320/285'
-    page.hero_image fill-768x530 as image_medium:
+    hero_image fill-768x530 as image_medium:
       target_var: image_medium
       raw:
         url: '//placekitten.com/768/530'
-    page.hero_image fill-1440x530 as image_large:
+    hero_image fill-1440x530 as image_large:
       target_var: image_large
       raw:
         url: '//placekitten.com/1440/530'
